// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationBase should render with all props 1`] = `
<ApplicationBase
  locale="en"
  themeName="test-theme"
  unloadPromptIsDisabled={true}
/>
`;

exports[`ApplicationBase should render with minimal props 1`] = `
<ApplicationBase
  locale="en"
/>
`;

exports[`ApplicationBase should render with the preferred browser locale 1`] = `<ApplicationBase />`;
